Implemented: 1. RTOS with interrupt function 2. Clicking two buttons simultaneously

--- a/STM32_Development.ioc
+++ b/STM32_Development.ioc
@@ -1,22 +1,28 @@
 #MicroXplorer Configuration settings - do not modify
 ADC.IPParameters=Resolution
 ADC.Resolution=ADC_RESOLUTION_8B
+FREERTOS.FootprintOK=true
+FREERTOS.INCLUDE_vTaskDelayUntil=1
+FREERTOS.IPParameters=Tasks01,FootprintOK,INCLUDE_vTaskDelayUntil,configTOTAL_HEAP_SIZE
+FREERTOS.Tasks01=defaultTask,-3,1800,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-3,512,StartTask02,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=10240
 File.Version=6
 I2C2.IPParameters=Timing
 I2C2.Timing=0x20303E5D
 KeepUserPlacement=true
 Mcu.Family=STM32F0
 Mcu.IP0=ADC
-Mcu.IP1=I2C2
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI2
-Mcu.IP5=SYS
-Mcu.IP6=TIM6
-Mcu.IP7=TSC
-Mcu.IP8=USART1
-Mcu.IP9=USB
-Mcu.IPNb=10
+Mcu.IP1=FREERTOS
+Mcu.IP10=USB
+Mcu.IP2=I2C2
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI2
+Mcu.IP6=SYS
+Mcu.IP7=TIM6
+Mcu.IP8=TSC
+Mcu.IP9=USART1
+Mcu.IPNb=11
 Mcu.Name=STM32F072R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
@@ -46,27 +52,28 @@ Mcu.Pin3=PA0
 Mcu.Pin30=PB4
 Mcu.Pin31=PB5
 Mcu.Pin32=PB6
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin34=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin33=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin35=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PC5
-Mcu.PinsNb=35
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F072RBTx
 MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
-NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI4_15_IRQn=true\:3\:0\:false\:false\:true\:true\:true\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.PendSV_IRQn=true\:3\:0\:false\:false\:false\:true\:true\:false
+NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
+NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:3\:0\:false\:false\:true\:true\:true\:true
 PA0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PA0.GPIO_Label=B1 [Blue PushButton]
 PA0.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
@@ -149,8 +156,9 @@ PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=Button_C
 PB4.Locked=true
 PB4.Signal=GPXTI4
-PB5.GPIOParameters=GPIO_Label
+PB5.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB5.GPIO_Label=Button_B
+PB5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB5.Locked=true
 PB5.Signal=GPXTI5
 PB6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
@@ -290,6 +298,8 @@ USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB.IPParameters=phy_itface,speed
 USB.phy_itface=PCD_PHY_EMBEDDED
 USB.speed=PCD_SPEED_FULL
+VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
+VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
