--- a/STM32_Development.ioc
+++ b/STM32_Development.ioc
@@ -3,8 +3,9 @@ ADC.IPParameters=Resolution
 ADC.Resolution=ADC_RESOLUTION_8B
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,FootprintOK,INCLUDE_vTaskDelayUntil,configTOTAL_HEAP_SIZE
-FREERTOS.Tasks01=defaultTask,-3,1800,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-3,512,StartTask02,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,INCLUDE_vTaskDelayUntil,configTOTAL_HEAP_SIZE,Queues01
+FREERTOS.Queues01=ledShow,1,uint8_t,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,-3,1800,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-3,128,StartTask02,Default,NULL,Dynamic,NULL,NULL;continuousTask0,-3,128,ContinuousTask01,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=10240
 File.Version=6
 I2C2.IPParameters=Timing
@@ -13,16 +14,17 @@ KeepUserPlacement=true
 Mcu.Family=STM32F0
 Mcu.IP0=ADC
 Mcu.IP1=FREERTOS
-Mcu.IP10=USB
+Mcu.IP10=USART1
+Mcu.IP11=USB
 Mcu.IP2=I2C2
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI2
 Mcu.IP6=SYS
-Mcu.IP7=TIM6
-Mcu.IP8=TSC
-Mcu.IP9=USART1
-Mcu.IPNb=11
+Mcu.IP7=TIM1
+Mcu.IP8=TIM6
+Mcu.IP9=TSC
+Mcu.IPNb=12
 Mcu.Name=STM32F072R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
@@ -39,29 +41,31 @@ Mcu.Pin18=PC7
 Mcu.Pin19=PC8
 Mcu.Pin2=PC2
 Mcu.Pin20=PC9
-Mcu.Pin21=PA9
-Mcu.Pin22=PA10
-Mcu.Pin23=PA11
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PC12
-Mcu.Pin28=PD2
-Mcu.Pin29=PB3
+Mcu.Pin21=PA8
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PC12
+Mcu.Pin29=PD2
 Mcu.Pin3=PA0
-Mcu.Pin30=PB4
-Mcu.Pin31=PB5
-Mcu.Pin32=PB6
-Mcu.Pin33=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin30=PB3
+Mcu.Pin31=PB4
+Mcu.Pin32=PB5
+Mcu.Pin33=PB6
+Mcu.Pin34=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin35=VP_SYS_VS_Systick
+Mcu.Pin36=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PC5
-Mcu.PinsNb=36
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F072RBTx
@@ -115,6 +119,7 @@ PA6.Signal=TSC_G2_IO3
 PA7.Locked=true
 PA7.Mode=G2_IO4-Sampling
 PA7.Signal=TSC_G2_IO4
+PA8.Signal=S_TIM1_CH1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.Locked=true
@@ -243,7 +248,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_TSC_Init-TSC-false-HAL-true,6-MX_USB_PCD_Init-USB-false-HAL-true,7-MX_ADC_Init-ADC-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_TSC_Init-TSC-false-HAL-true,6-MX_USB_PCD_Init-USB-false-HAL-true,7-MX_ADC_Init-ADC-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -276,12 +281,18 @@ SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI2.CalculateBaudRate=12.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=CalculateBaudRate,Mode,BaudRatePrescaler,VirtualType,Direction
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
+TIM1.Period=65535
+TIM1.Prescaler=0
 TIM6.IPParameters=Period,Prescaler
 TIM6.Period=801
 TIM6.Prescaler=601
@@ -302,6 +313,8 @@ VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=STM32F072B-DISCO
